@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.monarchinitiative.phenol</groupId>
     <artifactId>phenol</artifactId>
-    <version>1.6.4-SNAPSHOT</version>
+    <version>2.0.0-RC3-SNAPSHOT</version>
   </parent>
 
   <artifactId>phenol-io</artifactId>
@@ -38,5 +38,17 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-reads com.fasterxml.jackson.datatype.guava=ALL-UNNAMED </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
